Update titles and section heading in HTML files
Changed the page title in CheckoutAppProject.html and updated the 'Selected Work' section heading to 'Projects' in index.html for improved clarity and consistency.

--- a/CheckoutAppProject.html
+++ b/CheckoutAppProject.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Project — Checkout App | Charlie Bekendam</title>
+  <title>Checkout App Project</title>
   <meta name="description" content="Case study for Project Title Here by Charlie Bekendam." />
   <meta name="color-scheme" content="light dark">
   <link rel="stylesheet" href="styles/styles.css" />
@@ -170,7 +170,5 @@
     <button class="lightbox-close" aria-label="Close">✕</button>
     <img class="" alt="">
   </div>
-
-  <script src="scripts/main.js"></script>
 </body>
 </html>
