--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <!-- WORK / PROJECTS -->
     <section class="section" id="work">
       <div class="container" data-reveal>
-        <h2 class="section-title">Selected Work</h2>
+        <h2 class="section-title">Projects</h2>
         <p class="section-sub">A handful of things I've designed and built.</p>
         <div id="projectsGrid" class="grid cols-3"></div>
       </div>
