Fix DOM element checks and add script to HTML
Corrected the element existence checks in main.js to properly verify DOM elements before proceeding. Also added the main.js script reference to CheckoutAppProject.html to ensure scripts are loaded.

--- a/CheckoutAppProject.html
+++ b/CheckoutAppProject.html
@@ -170,5 +170,7 @@
     <button class="lightbox-close" aria-label="Close">✕</button>
     <img class="" alt="">
   </div>
+
+  <script src="scripts/main.js"></script>
 </body>
 </html>
