--- a/SoloGolfGame.html
+++ b/SoloGolfGame.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>My Project — Overview & Devlogs | Charlie Bekendam</title>
+  <title>Golf Game</title>
   <meta name="description" content="Overview and development updates for My Project by Charlie Bekendam." />
   <meta name="color-scheme" content="light dark">
   <link rel="stylesheet" href="styles/styles.css" />
@@ -45,7 +45,7 @@
         <nav aria-label="Breadcrumb" class="breadcrumbs">
           <a href="index.html#work" class="btn ghost">← Back to Work</a>
         </nav>
-        <h1 class="section-title">My Project Title</h1>
+        <h1 class="section-title">Golf Game (Name in progress)</h1>
         <p class="section-sub">One-sentence value prop for this project.</p>
         <div class="chips" aria-label="Technologies">
           <span class="badge">Unity</span>
@@ -67,20 +67,20 @@
             <div><dt>Role</dt><dd>Designer & Developer</dd></div>
             <div><dt>Timeline</dt><dd>Jul 2025 - Present</dd></div>
             <div><dt>Team</dt><dd>Solo</dd></div>
-            <div>
+            <!-- <div>
               <dt>Links</dt>
               <dd>
                 <a class="btn small" href="#" target="_blank" rel="noopener">Live Demo</a>
                 <a class="btn small secondary" href="#" target="_blank" rel="noopener">GitHub</a>
               </dd>
-            </div>
+            </div> -->
           </dl>
         </aside>
 
         <article class="project-body">
           <section class="project-section">
             <h2>Overview</h2>
-            <p>Short description of what the project does, who it's for, and what makes it interesting. Add 1-2 images or gifs if helpful.</p>
+            <p>A multiplayer game made in unreal for my solo project in my GIMM400 class. Play with up to 6 friends in an upscaled mini-golf game.</p>
           </section>
 
           <section class="project-section">
@@ -91,7 +91,7 @@
                 <label for="search" class="sr-only">Search devlogs</label>
                 <input id="search" type="search" placeholder="Search updates (title, text, tags)…" />
               </div>
-              <div class="devlog-tags" id="tagChips" aria-label="Filter by tag"></div>
+              <!-- <div class="devlog-tags" id="tagChips" aria-label="Filter by tag"></div> -->
               <div class="devlog-sort">
                 <label for="sort" class="sr-only">Sort</label>
                 <select id="sort">
