--- a/CheckoutAppProject.html
+++ b/CheckoutAppProject.html
@@ -61,7 +61,15 @@
         </div>
 
         <div class="card project-hero">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/AinCYvlj1hY?si=xiVDl6CNxgAZAVaf" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+          <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; border-radius: 12px;">
+            <iframe 
+              style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: 0;" 
+              src="https://www.youtube.com/embed/AinCYvlj1hY?si=xiVDl6CNxgAZAVaf" 
+              title="Accessible Checkout App Demo" 
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+              allowfullscreen>
+            </iframe>
+          </div>
         </div>
       </div>
     </section>
