--- a/flyTyingProject.html
+++ b/flyTyingProject.html
@@ -87,7 +87,7 @@
               <dt>Timeline</dt><dd>Spring 2025 (In Progress)</dd>
             </div>
             <div>
-              <dt>Team</dt><dd>3 members</dd>
+              <dt>Team</dt><dd>Solo</dd>
             </div>
             <!-- <div>
               <dt>Links</dt>
