Add video embed, image, and fix script loading
Embedded a YouTube video in AccountingApp.html and added a project homepage image. Updated SoloGolfGame.html to correct script loading order and paths. Modified main.js to add a class to project preview images, and updated styles.css to style these images.

--- a/AccountingApp.html
+++ b/AccountingApp.html
@@ -81,6 +81,7 @@
           <section class="project-section">
             <h2>Overview</h2>
             <p>A multiplayer game made in unreal for my solo project in my GIMM400 class. Play with up to 6 friends in an upscaled mini-golf game.</p>
+            <iframe width="668" height="1187" src="https://www.youtube.com/embed/DLrSM3x7c6s" title="Accounting App Test Video 1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
           </section>
 
           <section class="project-section">
